tests/negative/typecheck/cyclic4.orng
// cyclic4.orng:5:7: error: cyclic type detected
// type A = ( ?&B, Int )
//      ^
// 
type A = ( ?&B, Int )
type B = ( ?&A, Int )

fn main() -> Int {
    let mut a: A = (.none, 200)
    let b: B = (.none, 86)
    a[0] = .some(&b)
    a[1] + a[0].some[1]
}
